base/deployment-json-schema.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json-schema
  labels:
    tier: frontend
    role: json-schema
spec:
  selector:
    matchLabels:
      tier: frontend
      role: json-schema
  replicas: 1
  template:
    metadata:
      labels:
        tier: frontend
        role: json-schema
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - name: frontend-json-schema
        image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/backend-springboot/json-schema:f9a09d98
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: "nginx-static-file-conf"
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: "nginx.conf"
      volumes:
      - name: nginx-static-file-conf
        configMap:
          name: "nginx-static-file-conf"
