base/deployment-metadata-portal.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-portal
  labels:
    tier: backend
    role: metadata-portal
spec:
  selector:
    matchLabels:
      tier: backend
      role: metadata-portal
  replicas: 1
  template:
    metadata:
      labels:
        tier: backend
        role: metadata-portal
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - name: springboot-metadata-portal
        image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/backend-springboot/backend-metadata-portal:3e7d31ab
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theia-frontend
  labels:
    tier: frontend
    role: webui
spec:
  selector:
    matchLabels:
      tier: frontend
      role: webui
  replicas: 3
  template:
    metadata:
      labels:
        tier: frontend
        role: webui
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - name: theia-frontend
        image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/theia-ozcar-ui:17132b3b
        imagePullPolicy: Always
        ports:
        - containerPort: 80
