base/deployment-variable-association.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-variable-association
  labels:
    tier: backend
    role: backend-variable-association
spec:
  selector:
    matchLabels:
      tier: backend
      role: backend-variable-association
  replicas: 1
  template:
    metadata:
      labels:
        tier: backend
        role: backend-variable-association
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - name: backend-springboot-variable-association
        image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/backend-springboot/backend-association-variable:2293e511
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-variable-association
  labels:
    tier: frontend
    role: frontend-variable-association
spec:
  selector:
    matchLabels:
      tier: frontend
      role: frontend-variable-association
  replicas: 1
  template:
    metadata:
      labels:
        tier: frontend
        role: frontend-variable-association
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - name: frontend-variable-association
        image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/variable-association-ui:7b09d46e
        imagePullPolicy: Always
        ports:
        - containerPort: 80
