base/deployment-geonetwork-standalone.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: geonetwork
  name: geonetwork
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      role: geonetwork
  template:
    metadata:
      labels:
        role: geonetwork
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/docker-thirdparty/geonetwork:4.0.2
        imagePullPolicy: Always
        name: geonetwork
        resources:
          limits:
            memory: "4Gi"
          requests:
            memory: "2Gi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: ca-pemstore
          mountPath: /etc/ssl/certs/osug-ca.pem
          subPath: osug-ca.pem
          readOnly: false
        - name: geonetwork-volume
          mountPath: /catalogue-data
      volumes:
      - name: ca-pemstore
        configMap:
          name: osug-ca
      - name: geonetwork-volume
        persistentVolumeClaim:
          claimName: geonetwork-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: geonetwork-elastic
  name: geonetwork-elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      role: geonetwork-elastic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        role: geonetwork-elastic
    spec:
      containers:
      - image: elasticsearch:7.9.3
        name: elasticsearch
        resources:
          limits:
            memory: "4Gi"
          requests:
            memory: "2Gi"
        ports:
        - containerPort: 9200
        volumeMounts:
          - name: geonetwork-es-volume
            mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: geonetwork-es-volume
          persistentVolumeClaim:
            claimName: geonetwork-elasticsearch-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: geonetwork-kibana
  name: geonetwork-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      role: geonetwork-kibana
  strategy: {}
  template:
    metadata:
      labels:
        role: geonetwork-kibana
    spec:
      containers:
      - image: kibana:7.9.3
        name: kibana
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "1Gi"
        ports:
        - containerPort: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: geonetwork-populate-app
  name: geonetwork-populate-app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: geonetwork-populate-app
  strategy: {}
  template:
    metadata:
      labels:
        role: geonetwork-populate-app
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/backend-springboot/populate-geonetwork-service:f9a09d98
        name: geonetwork-populate-app
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "512Mi"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: geonetwork-elastic-service
  labels:
    role: geonetwork-elastic
spec:
  ports:
    - port: 9200
      name: elastic
  selector:
    role: geonetwork-elastic
---
apiVersion: v1
kind: Service
metadata:
  name: geonetwork-service
  labels:
    role: geonetwork
spec:
  ports:
  - port: 8080
    name: geonetwork
  selector:
    role: geonetwork
---
apiVersion: v1
kind: Service
metadata:
  name: geonetwork-kibana-service
  labels:
    role: geonetwork-kibana
spec:
  ports:
  - port: 5601
    name: kibana
  selector:
    role: geonetwork-kibana
---
apiVersion: v1
kind: Service
metadata:
  name: geonetwork-populate-app-service
  labels:
    role: geonetwork-populate-app
spec:
  ports:
  - port: 8080
    name: geonetwork-populate-app
  selector:
    role: geonetwork-populate-app
