base/mongo-standalone.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels: 
    role: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    role: mongo
spec:
  selector:
    matchLabels:
      role: mongo
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        role: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: "3"
              memory: "6Gi"
            requests:
              cpu: "3"
              memory: "6Gi"
          volumeMounts:
          - name: mongo-data
            mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-data-claim
