base/rabbit-mq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-mq
  labels:
    tier: backend
    role: rabbit-mq
spec:
  selector:
    matchLabels:
      tier: backend
      role: rabbit-mq
  replicas: 1
  template:
    metadata:
      labels:
        tier: backend
        role: rabbit-mq
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - name: rabbit-mq
        image: rabbitmq:3-management 
        imagePullPolicy: Always
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-mq-service
  labels:
    tier: backend
    role: rabbit-mq
spec:
  ports:
    - port: 5672
      name: rabbit-mq
    - port: 15672
      name: rabbit-mq-management
  selector:
    tier: backend
    role: rabbit-mq
