base/rdf4j.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdf4j
  labels:
    tier: backend
    role: rdf4j
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      tier: backend
      role: rdf4j
  replicas: 1
  template:
    metadata:
      labels:
        tier: backend
        role: rdf4j
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - name: rdf4j
        image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/docker-thirdparty/rdf4j:3.7.4
        imagePullPolicy: Always
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "1Gi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: rdf4j-data
          mountPath: /var/rdf4j
      volumes:
        - name: rdf4j-data
          persistentVolumeClaim:
            claimName: rdf4j-claim
---
apiVersion: v1
kind: Service
metadata:
  name: rdf4j-service
  labels:
    tier: backend
    role: rdf4j
spec:
  ports:
  - port: 8080
    name: rdf4j
  selector:
    tier: backend
    role: rdf4j
