base/rest-countries.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-countries
  labels:
    tier: backend
    role: rest-countries
spec:
  selector:
    matchLabels:
      tier: backend
      role: rest-countries
  replicas: 1
  template:
    metadata:
      labels:
        tier: backend
        role: rest-countries
    spec:
      imagePullSecrets:
      - name: theia-group-registry
      containers:
      - name: rest-countries
        image: gricad-registry.univ-grenoble-alpes.fr/theia-ozcar/docker-thirdparty/rest-countries:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rest-countries-service
  labels:
    tier: backend
    role: rest-countries
spec:
  ports:
    - port: 8080
      name: rest-countries
  selector:
    tier: backend
    role: rest-countries
